--- a/appfile/templates/problemstatus.html
+++ b/appfile/templates/problemstatus.html
@@ -1,20 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
 <title> {{ pid }}'s Status List </title>
-<div id="wrapper2">
-    <h2 class="center blue"> Best solutions of Problem {{ pid }} </h2>
-    <table class="center">
-        <tr style="background-color: #1A5CC8; color:white; height:39px">
-            <th width="39px"> Rank </th>
+<div class="container">
+    <center><h2> Best Solutions of Problem {{ pid }} </h2></center>
+    <br>
+    <table class="table table-striped table-hover">
+        <thead>
+        <tr class="info">
+            <th width="70px"> Rank </th>
             <th width="139px"> User </th>
-            <th width="70px"> Memory </th>
-            <th width="70px"> Time </th>
+            <th> Memory </th>
+            <th> Time </th>
             <th> Language </th>
             <th> Code Length </th>
             <th width="170px"> Submit Time </th>
         </tr>
+        </thead>
+        <tbody>
         {% for solution in solution_list.items %}
-        <tr style="{{ loop.cycle('', 'background-color:#D7EBFF') }}">
+        <tr>
             <td> {{ MAX_SUBMIT_NUM_ONE_PAGE * (page - 1) + solution_list.items.index(solution) + 1 }} </td>
             <td><a href={{ url_for('userinfo', userid = solution.userid) }} target="_blank"> {{ solution.userid }} </a></td>
             <td> {{ solution.memory_used }} K </td>
@@ -24,15 +28,22 @@
             <td> {{ solution.submit_time }} </td>
         </tr>
         {% endfor %}
+        </tbody>
     </table>
-    <div class="center">
-    [<a href={{ url_for('problemstatus', pid = pid) }}> Top </a>]
-    {% if solution_list.has_prev %}
-        [<a href={{ url_for('problemstatus', pid = pid, page = solution_list.pre_num) }}> Previous Page </a>]
-    {% endif %}
-    {% if solution_list.has_next %}
-        [<a href={{ url_for('problemstatus', pid = pid, page = solution_list.next_num) }}> Next Page </a>]
-    {% endif %}
-    </div>
+    <ul class="pager">
+        <li>
+            <a href={{ url_for('problemstatus', pid = pid) }}>Top</a>
+        </li>
+        {% if solution_list.has_prev %}
+        <li>
+            <a href={{ url_for('problemstatus', pid = pid, page = solution_list.pre_num) }}>&larr; Previous</a>
+        </li>
+        {% endif %}
+            {% if solution_list.has_next %}
+        <li>
+            <a href={{ url_for('problemstatus', pid = pid, page = solution_list.next_num) }}>Next &rarr;</a>
+        </li>
+        {% endif %}
+    </ul>
 </div>
 {% endblock %}
