--- a/appfile/templates/admin_problemset.html
+++ b/appfile/templates/admin_problemset.html
@@ -7,6 +7,7 @@
             <tr class="info">
                 <th id="ps_pid">Problem ID</th>
                 <th id="ps_title">Title</th>
+                <th>Delete</th>
                 <th id="ps_ac">Edit</th>
                 <th id="ps_submit">Hide</th>
             </tr>
@@ -17,7 +18,10 @@
                 <td>{{ problem.pid }}</td>
                 <td align="left">{{ problem.title }}</td>
                 <td>
-                    <a href={{ url_for('admin_edit_problem', pid=problem.pid) }} class="btn btn-primary btn-sm"> Edit </a>
+                    <a href={{ url_for('admin_delete_problem', pid=problem.pid) }} class="btn btn-danger btn-sm"> Delete </a>
+                </td>
+                <td>
+                    <a href={{ url_for('admin_edit_problem', pid=problem.pid) }} class="btn btn-warning btn-sm"> Edit </a>
                 </td>
                 {% if problem.visable %}
                 <td>
