--- a/appfile/templates/admin_problemset.html
+++ b/appfile/templates/admin_problemset.html
@@ -1,5 +1,6 @@
 {% extends "admin_base.html" %}
 {% block content %}
+<title>Admin Page</title>
 <br><br>
 <div class="container">
     <table class="table table-striped table-hover">
