--- a/appfile/templates/index.html
+++ b/appfile/templates/index.html
@@ -9,7 +9,7 @@
         <p>
             Now we support for <font style="color: red">C,C++,Python</font>
         </p>
-        <a href="/" class="btn btn-primary">Learn More</a>
+        <a href="/FAQ/" class="btn btn-primary">Learn More</a>
     </div>
 </div>
 {% endblock %}
