--- a/appfile/templates/problemset.html
+++ b/appfile/templates/problemset.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<title>Problemset</title>
 <div class="container">
     <br><br>
     <div class="row">
