--- a/appfile/templates/userinfo.html
+++ b/appfile/templates/userinfo.html
@@ -44,6 +44,14 @@
             </p>
         </div>
     </div>
-
+    <br>
+    <div class="progress">
+        <div class="progress-bar progress-bar-success progress-bar-striped active" style="width: 35%">
+            Accepted
+        </div>
+        <div class="progress-bar progress-bar-danger progress-bar-striped active" style="width: 65%">
+            Other
+        </div>
+    </div>
 </div>
 {% endblock %}
