--- a/appfile/templates/base.html
+++ b/appfile/templates/base.html
@@ -71,7 +71,7 @@
         {% block content %}
         {% endblock %}
 
-        <div class="container">
+        <div class="container foot">
             <footer>
                 <hr>
                 <p class="text-center">
