--- a/appfile/templates/login.html
+++ b/appfile/templates/login.html
@@ -18,6 +18,7 @@
             {% endif %}
             {% endwith %}
             <hr>
+            {{ form.next_url }}
             <div class="form-group">
                 {{ form.userid.label(class="control-label") }}
                 {{ form.userid(class="form-control", placeholder="Enter UserID") }}
